--- a/README.Rmd
+++ b/README.Rmd
@@ -18,9 +18,9 @@ This repo attempts to recreate the McKell Institute's super-wages model presente
 
 It uses the statistical package R and publicly-available data. Three R scripts are used in order:
 
-1. `01_get_data.R`:  
-2. `02_prepare_data.R`: 
-3. `03_run_regressions.R`: 
+1. `01_get_data.R`: Retrive and tidy data from the ABS, OECD and RBA.
+2. `02_prepare_data.R`: Combine data and generate variables for the model set.
+3. `03_run_regressions.R`: Fit four models on each of AWOTE, AENA (wages) and AENA (social).
 
 ```{r, message = FALSE, warning = FALSE}
 source("R/01_get_data.R")
@@ -29,5 +29,4 @@ source("R/03_run_regressions.R")
 ```
 
 They compile relevant data and produce tables of regression results for four model specifications.
-
 
